# fastapi-sqlmodel-alembic

./: .gitignore  README.md  docker-compose.yml
project/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
project/app/: api.py  db.py  main.py  models.py  scheduler.py  settings.py  utils.py
project/app/products/: models.py  router.py  schemas.py  service.py
project/app/utils/: base_class.py  custom_logger.py
project/migrations/: env.py  script.py.mako
project/migrations/versions/: 1e2a4d30fc67_init.py  53754b2c08a4_add_year.py  842abcd80d3e_init.py  94598cb1fa7b_add_year.py  ac891bc75d61_init.py  bf9bd33c0c06_init.py  d857d7533428_add_year.py  f68b489cdeb0_add_year.py  f9c634db477d_init.py
project/tests/: conftest.py  test_products.py
sql/: create_tables.sql  lol.py  mock_data.csv  multiple_db.sh
