[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["jonra1993 <jon_ra@hotmail.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.7.6"
asyncpg = "^0.25.0"
fastapi = "^0.75.0"
sqlmodel = "^0.0.6"
uvicorn = "^0.17.5"
jose = "^1.0.0"
python-jose = "^3.3.0"
email-validator = "^1.1.3"
cryptography = "^36.0.1"
passlib = "^1.7.4"
SQLAlchemy-Utils = "^0.38.2"
black = "^22.1.0"
SQLAlchemy = "^1.4.31"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
